1.9.1
-----
1. Add option to show 'Go home' button.
2. No need to scroll search field into view if its in subtoolbar.
3. Fix rating HTML being displayed when a queue item's rating is updated and
   'More' selected.
4. Add note to sort-favourites config item stating that folders are always
   sorted.

1.9.0
-----
 1. Allow specifying theme, and colour, via URL query. e.g.
    http://SERVER:9000/material/?theme=dark,green For platform themes (e.g.
    Adwaita-Dark) you need to specify path. e.g. "theme=linux/dark/Adwaita-Dark"
 2. Add 'Add to playlist' action, allowing tracks to be saved to new, or
    existing, playlists.
 3. On desktop browsers, allow keypress to jump via jumplist.
 4. Ignore swipe to change page if started in time position bar.
 5. For mobile devices, show time position tooltip with touch and drag.
 6. Replace search dialog with a search-as-type text field in subtoolbar.
 7. Show other search options at end of search results.
 8. Intercept links on now-playing and browse pages and show a menu allowing to
    choose from following link or searching for item.
 9. Allow editing of podcast URL as well as name.
10. Use treble-clef as genre icon.
11. Fix HTML tags shown in confirmation dialog.
12. Add action to remove duplicates from playlists.
13. Remove home button. Functionality can be achieved via long-press on back
    button or (in mobile layout) bottom nav 'Browse' button, or by using popup
    menu on subtoolbar title.
14. Fix grid size changing when browse from a list with jumplist to one without
    (and vice versa).
15. Add mapping for TVHeadend icon.
16. Show 'Music sources' as subtoolbar title on browse home screen.
17. Reduce long-press timeout from 1s to 500ms.
18. Fix various keys causing browse to navigate back.
19. Make URLs case-insensitive - e.g. allow http://HOST:9000/Material/Mobile
20. When checking where to add add/play all buttons, look for 'wimp' as well as
    'tidal'